<resources>
    <string name="app_name">aplicacion_movil_gian</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="zoom">Zoom+</string>
    <string name="zoommenos">Zoom-</string>
    <string name="ocultar">Ocultar</string>
    <string name="reset">Reiniciar</string>
    <string name="todo">TODO</string>
    <string name="seleccione_una_moneda">Seleccione una moneda</string>
    <string name="conversor_monedas">Conversor Monedas</string>
    <string name="dolar_usa">Dolar(USA)</string>
    <string name="euro">EURO</string>
    <string name="real_brasil">REAL(BRASIL)</string>
    <string name="resultado">resultado</string>
    <string name="convertir">convertir</string>
    <string name="aplicacion_1">Aplicacion 1</string>
    <string name="aplicacion_2">Aplicacion 2</string>
    <string name="Saludo">Bienvenido a mi Aplicacion</string>
    <string name="Contactenos">Contactenos</string>
    <string name="Telefono">Telefono</string>
    <string name="Mail">Mail</string>
    <string name="GitHub">GitHub</string>
</resources>