<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imagen_2"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/dinero"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="30dp"
        android:text="@string/conversor_monedas"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/ingreso_dinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/texto_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:textSize="20sp"
        android:text="@string/seleccione_una_moneda"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="150dp" >


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/dolar_usa" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/euro"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/btn_real"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/real_brasil" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="none"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:hint="@string/resultado"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:backgroundTint="@color/material_on_surface_stroke"
            android:clickable="true"
            android:text="@string/convertir" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginStart="20dp"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/material_on_surface_stroke"/>
    </LinearLayout>

</LinearLayout>