<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="304dp"
        android:layout_height="241dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/calculadora2"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btn_sumar"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/sumar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_restar"
        app:layout_constraintEnd_toStartOf="@+id/btn_restar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_restar" />

    <Button
        android:id="@+id/btn_restar"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/restar"
        app:layout_constraintBottom_toTopOf="@+id/btn_zoomnegativo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/btn_zoompositivo"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/zoom"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_zoomnegativo"
        app:layout_constraintEnd_toStartOf="@+id/btn_zoomnegativo"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_zoomnegativo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_zoomnegativo"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/zoommenos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_restar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_restar"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/btn_ocultar"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/ocultar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reiniciar"
        app:layout_constraintEnd_toEndOf="@+id/btn_zoompositivo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_zoompositivo"
        app:layout_constraintTop_toTopOf="@+id/btn_reiniciar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_reiniciar"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:text="@string/reset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_zoomnegativo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_zoomnegativo"
        app:layout_constraintTop_toBottomOf="@+id/btn_zoomnegativo" />

    <EditText
        android:id="@+id/ingresocuenta"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagen"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>