<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    tools:context=".MainActivity_Menu">

    <TextView
        android:id="@+id/Saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saludo"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btn_activity_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/aplicacion_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_activity_2"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Saludo"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/btn_activity_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Vista"
        android:text="@string/aplicacion_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_activity_1"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_activity_1"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

